--- a/css/default.css
+++ b/css/default.css
@@ -24,29 +24,13 @@
     height: 90px;
 }
 
-.header{               
-    width: 100%;       
-    height: 800px;      
-    background: url("../assets/imgs/banner-condominio_opacity.jpg") no-repeat 50% 50%;
-    background-size: cover; 
-    background-attachment: fixed;
-}
-
-.hero-text{
-    text-align: center;
-    position: absolute;;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    color: white;
-}
   
 .hero-text p{
 font-size: 25px;
 }
 
 .hero-text h1{
-font-size: 80px;
+font-size: auto;
 }
 
 .btn-flat{
@@ -75,4 +59,24 @@ font-size: 80px;
     color: #29b6f6;
 }
 
+.fa-bars{
+    margin-bottom:-60%;
+}
 
+
+@media only screen and (max-width: 600px) {
+
+.hero-text{
+    text-align: center;
+    position: absolute;;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
+    
+}
+
+.hero-text h1{
+    font-size: auto;
+}
+}
